# ChangeLog for sys-boot/grub
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.130 2010/01/17 01:24:17 vapier Exp $

  17 Jan 2010; Mike Frysinger <vapier@gentoo.org>
  files/grub-1.96-genkernel.patch:
  Detect genkernel initramfs files #300710 by Vincent-Xavier JUMEL.

  10 Jan 2010; Mike Frysinger <vapier@gentoo.org> grub-1.97.1.ebuild,
  grub-9999.ebuild:
  Only build grub-mkfont when USE=truetype #275654 by Cameron Tacklind.

  22 Nov 2009; Mike Frysinger <vapier@gentoo.org> grub-9999.ebuild:
  Switch from svn to bzr repo #294001 by Robin Kauffman.

*grub-1.97.1 (11 Nov 2009)

  11 Nov 2009; Mike Frysinger <vapier@gentoo.org> +grub-1.97.1.ebuild:
  Version bump #292677 by Hanno Boeck.

  01 Nov 2009; Mike Frysinger <vapier@gentoo.org> grub-1.97.ebuild,
  grub-9999.ebuild:
  Enable epatch_user for easier patch hooking.

*grub-1.97 (26 Oct 2009)

  26 Oct 2009; Mike Frysinger <vapier@gentoo.org> +grub-1.97.ebuild,
  grub-9999.ebuild:
  Version bump #290533 by Opportunist.

  14 Oct 2009; Mike Frysinger <vapier@gentoo.org> grub-9999.ebuild:
  Fix by pyon for USE=multislot and info collisions #288877.

  30 Sep 2009; Mike Frysinger <vapier@gentoo.org> grub-9999.ebuild:
  Switch to --disable-werror #285776 by David Pyke.

  05 Jul 2009; Mike Frysinger <vapier@gentoo.org> grub-9999.ebuild:
  Disable efiemu/pe2elf #276262 by Auke Booij.

  04 Jul 2009; Robin H. Johnson <robbat2@gentoo.org> grub-0.97-r9.ebuild:
  Bug #255271: check for IA32_EMULATION on 64-bit, as we are building a
  32-bit binary and need to be able to run it.

  20 Jun 2009; Mike Frysinger <vapier@gentoo.org> grub-9999.ebuild:
  Enable efi/mkfont/pe2elf code and add USE=debug #273896 by John Christian
  Stoddart.

  15 May 2009; Markus Meier <maekke@gentoo.org> grub-0.97-r9.ebuild:
  amd64 stable, bug #269201

  15 May 2009; Mike Frysinger <vapier@gentoo.org> grub-9999.ebuild: