@@ -1,6 +1,10 @@
 # ChangeLog for sys-boot/grub
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.130 2010/01/17 01:24:17 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.131 2010/01/17 01:25:28 vapier Exp $
+
+  17 Jan 2010; Mike Frysinger <vapier@gentoo.org> grub-1.97.1.ebuild,
+  grub-9999.ebuild:
+  Workaround eautomake weirdness #296013.
 
   17 Jan 2010; Mike Frysinger <vapier@gentoo.org>
   files/grub-1.96-genkernel.patch:
